--- a/DonotFuck.csproj
+++ b/DonotFuck.csproj
@@ -4,8 +4,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-        <AssemblyName>Don'tFuck v2.0</AssemblyName>
+        <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     </PropertyGroup>
+    <ItemGroup>
+      <None Remove="内嵌文件\禁止脏话.json" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="内嵌文件\禁止脏话.json" />
+    </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="TShock" Version="5.*" />
