--- a/DonotFuck.csproj
+++ b/DonotFuck.csproj
@@ -14,6 +14,6 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="TShock" Version="5.*" />
+      <PackageReference Include="TShock" Version="5.2.0" />
     </ItemGroup>
 </Project>
